feat: 자동차 이름이 중복 입력 됐을 때 예외처리 하라
Car.java: equals & hashcode 메서드를 추가했다.
RacingGameController.java: 중복된 자동차 이름을 등록했을 때 예외처리를 구현했다.
README.md: 구현한 요구사항에 체크표시 했다.